# oddsinfer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/oddsinfer/overround/: __init__.py  rescaling.py  shin.py
src/oddsinfer/scoring/: __init__.py  rules.py
